syntax = "proto3";

package taskmanager;

option go_package = ".;taskmanager"; // Important for Go code generation

// The TaskManager service definition.
service TaskManager {
  // Creates a new task.
  rpc CreateTask (CreateTaskRequest) returns (Task) {}

  // Retrieves a task by its ID.
  rpc GetTask (GetTaskRequest) returns (Task) {}

  // Updates an existing task.
  rpc UpdateTask (UpdateTaskRequest) returns (Task) {}

  // Deletes a task by its ID.
  rpc DeleteTask (DeleteTaskRequest) returns (DeleteTaskResponse) {}

  // Lists all tasks.
  rpc ListTasks (ListTasksRequest) returns (ListTasksResponse) {}
}

// Represents a single task.
message Task {
  int32 id = 1;
  string title = 2;
  string description = 3;
  string due_date = 4; // Store as string for simplicity, parse in Go
  bool completed = 5;
  string created_at = 6; // Store as string, use timestamptz in DB
  string updated_at = 7; // Store as string, use timestamptz in DB
}

// Request message for creating a new task.
message CreateTaskRequest {
  string title = 1;
  string description = 2;
  string due_date = 3;
}

// Request message for retrieving a task.
message GetTaskRequest {
  int32 id = 1;
}

// Request message for updating a task.
message UpdateTaskRequest {
  int32 id = 1;
  string title = 2;
  string description = 3;
  string due_date = 4;
  bool completed = 5;
}

// Request message for deleting a task.
message DeleteTaskRequest {
  int32 id = 1;
}

// Response message for deleting a task.
message DeleteTaskResponse {
  bool success = 1;
}

// Request message for list tasks.
message ListTasksRequest {
}

// Response message for list tasks.
message ListTasksResponse {
 repeated Task tasks = 1;
}